--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,60 @@
-@import './base.css';
+/* @import './base.css'; */
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
   font-weight: normal;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+* {
+  outline: none;
+  box-sizing: border-box;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+img {
+  max-width: 100%;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+:root {
+  --body-font: 'Roboto', sans-serif;
+  --theme-bg: #d1e5f4;
+  --theme-bg-primary: #9abddc;
+  --theme-bg-secondary: #f5fbff;
+  --theme-dark: #050a30;
+  --theme-opal: #e9674d;
+
+  --body-color: #000;
+  --button-bg: #353340;
+  --border-color: rgb(128 129 145 / 24%);
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+body {
+  font-family: var(--body-font);
+  background-color: var(--theme-bg-secondary);
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.container {
+  /* background-color: var(--theme-bg); */
+  display: flex;
+  width: 100%;
+  font-size: 15px;
+  font-weight: 500;
+  position: relative;
+}
+
+.flex {
+  display: flex;
+}
+
+.item-center {
+  align-items: center;
+}
+
+.space-between {
+  justify-content: space-between;
 }
